# chief-40-vermont

./: .gitignore  BOOTSTRAP_INSTRUCTIONS.md  BRANCH_CLEANUP.md  CLAUDE.md  CODEBASE_AUDIT.md  LifeOS-CoS-SOP.docx  MAC_MINI_BOOTSTRAP.md  MAC_MINI_WALKTHROUGH.md  PERSONAL_MINI_SETUP.md  PIB-LifeOS-v4-Spec.xlsx  SIMULATION_REPORT.md  package-lock.json  pib-data-flows.jsx  pib-v5-blueprint (1).xlsx  pib-v5-build-spec (2).md  pyproject.toml  stice_financial_planner_streamlined (3).xlsx
archive/: MAC_MINI_BOOTSTRAP.md  README.md
config/: .env.example  agent_capabilities.yaml  bridge_identities.yaml  com.pib.runtime.plist  governance.yaml  openclaw-agents.yaml
console/: README.md  brain_routes.mjs  channel_routes.mjs  comms_routes.mjs  index.html  package-lock.json  package.json  seed.mjs  server.mjs
docs/: BOOTSTRAP_INSTRUCTIONS.md  MAC_MINI_WALKTHROUGH.md  atomic-prompts.md  bootstrap-readiness-task-plan.md  cos-enablement-spec.md  openclaw-integration.md  pib-api-contract.md  pib-v5-build-spec.md  pre-bootstrap-refactor.md
migrations/: 001_initial_schema.sql  002_add_energy_states.sql  002_member_settings.sql  003_comms_enhancement.sql  004_voice_intelligence.sql  005_sensor_bus.sql  006_capture_domain.sql  007_fts5_sync_triggers.sql  008_comms_per_member.sql  009_project_schema.sql  010_comms_batch_seed.sql  011_comms_fts5.sql  012_channel_registry.sql  013_entity_hierarchy.sql  014_channel_seed.sql  016_sensor_readings.sql  017_pre_bootstrap_fixes.sql  018_working_context.sql
reviews/: COMPREHENSIVE_GAP_ANALYSIS.md  IMPLEMENTATION_PLAN.md  SQUAD_B_FINDINGS.md  (+7 more)
(+161 files in other folders)
