[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pib"
version = "5.0.0"
description = "PIB v5 — ADHD-optimized household Chief-of-Staff"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "anthropic>=0.40",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "astral>=3.2",
    "pyyaml>=6.0",
    "python-ulid>=1.1.0",
]

[project.scripts]
pib = "pib.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "coverage>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Pure function tests (no DB, no network)",
    "integration: Database tests (in-memory SQLite)",
    "e2e: End-to-end with real adapters",
]

[tool.coverage.run]
source = ["src/pib"]
